# fractalescape

./: .cvsignore  .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.mkufm  args.c  args.h  bmpbuffer.h  brightscore.c  brightscore.h  config.cache  config.h  config.status  configure  configure.in  escape-inlines.h  escape.c  escape.h  fecode.cpp  fractalescape.kdevprj  linuxplatform.cpp  main.c  main.cpp  makefract.c  makefract.h  mkufm.pl  platform.h  pngwriter.c  pngwriter.h  random.c  random.h  tweak.sh  varscore.c  varscore.h
fractalescape/: FECode.h  Makefile  Makefile.am  Makefile.in  fecode.cpp  fractalescape  main.cpp  test  test.cpp  test.cpp~
fractalescape/.deps/: fecode.P  linuxplatform.P  main.P
work/fromnt/: FECode.h  fecode.cpp  linuxplatform.cpp  main.cpp
