####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = fractalescape
fractalescape_SOURCES = main.cpp linuxplatform.cpp fecode.cpp 
fractalescape_LDADD   = 


EXTRA_DIST = fecode.cpp linuxplatform.cpp main.cpp platform.h FECode.h 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = fractalescape
